--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <section id="game" class="game">
         <section id="overlay" class="overlay">
             <nav>
-                <a href="#">Start</a>
+                <a href="#" id="button-play" data-button-play>Start</a>
             </nav>
         </section>
 
