--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             </nav>
         </section>
 
+        <a href="#" id="button-builder-mode" data-button-builder-mode>Builder</a>
+
         <section id="scene" class="scene"></section>
     </section>
 
